# symmetrical-waddle

./: docker-compose.yml  pyproject.toml
scripts/: create_topic.sh  init_consumer.sh  init_producer.sh
symmetrical_waddle/: main.py
