[project]
name = "symmetrical_waddle"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Fernandes",email = "arthur0139@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kafka-python (>=2.2.15,<3.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
